--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         display: flex;
         justify-content: center;
         padding: 8px;
+        max-height: 100vh;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch; /* для плавности на iOS */
       }
       input[type="file"] {
         display: none;
